# signal-nav

./: .gitignore  README.md  pyproject.toml
docs/decisions/: 001_data_source.md  002_routing_algorithm.md
src/signal_nav/: api.py  demo.py  routing.py  validate_signals.py
static/: index.html
tests/: test_routing.py
