[project]
name = "signal-nav"
version = "0.1.0"
description = "Traffic signal minimizing route navigator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "osmnx>=2.0.0",
    "networkx>=3.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "folium>=0.19.0",
    "scikit-learn>=1.8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/signal_nav"]
